# data_analyze

./: .gitignore  Cargo.toml  README.md  flake.nix
ressources/: static.html
src/: lib.rs  utils.rs
src/data/: filtering.rs  linspace.rs  mod.rs  plot_data.rs  plottable.rs
src/data/plottable/: key.rs  mod.rs  sample.rs
src/params/: mod.rs
src/plotter/: line_plot.rs  mod.rs  scatter_plot.rs  utils.rs
src/static_html/: mod.rs  presentation_data.rs  to_html.rs
src/stats/: mod.rs  stats_serie.rs
src/wrapper/: correctness_wrapper.rs  mod.rs
tests/: apply_aggregator_test.rs  ir_build_test.rs  stats_serie_tests_from_dir.rs  stats_serie_tests_random.rs
tests/common/: mod.rs  plottable_helper.rs  stats_helper.rs
tests/ressources/stats_series/: generate_macro.py  generate_stats_series.py
tests/ressources/stats_series/data/: 0_sample_number_Angel.json  0_sample_number_Constant.json  0_sample_number_Danielle.json  0_sample_number_Jeffrey.json  0_sample_number_Jill.json  0_sample_number_Joshua.json  10_sample_number_Chad.json  10_sample_number_Constant.json  10_sample_number_Elizabeth.json  10_sample_number_Samuel.json  10_sample_number_Scott.json  10_sample_number_Tammy.json  1_sample_number_Brittany.json  1_sample_number_Carolyn.json  1_sample_number_Clayton.json  1_sample_number_Constant.json  1_sample_number_Erica.json  1_sample_number_Jennifer.json  2_sample_number_Constant.json  2_sample_number_Jason.json  2_sample_number_Katherine.json  2_sample_number_Lindsay.json  2_sample_number_Noah.json  2_sample_number_Robert.json  3_sample_number_Constant.json  3_sample_number_Cynthia.json  3_sample_number_Donna.json  3_sample_number_Joseph.json  3_sample_number_Nicole.json  3_sample_number_Teresa.json  4_sample_number_Amanda.json  4_sample_number_Brenda.json  4_sample_number_Carl.json  4_sample_number_Constant.json  4_sample_number_Mark.json  4_sample_number_Stephen.json  (+30 more)
