[package]
name = "plot_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
# Include test resources
test_resources = ["tests/test_data"]


[dependencies]

# legacy
lazy_static = "1.4.0"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.94"
csv = "1.3.0"

rayon = "1.9.0"
# log
log = "0.4.20"
test-log = "0.2.14"

# plot
plotters = "0.3.3"
paste = "1.0.14" # concatenate macro identifier

[dev-dependencies]
approx = "0.5.1"